reorganize files, create pages for about us section

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,12 +17,12 @@
 				<div class="dropdown">
 					<!-- changes to dropdown on smaller screen sizes -->
 					<h4 class="d-block d-md-none"><button class="dropdown-toggle d-block d-md-none" type="button" data-bs-target="#footer-menu-1" aria-controls="footer-menu-1" data-bs-toggle="collapse">About us</button></h4>
-					<h4 class="d-none d-md-block"><a href="{{ site.baseurl }}{% link about-us.html %}">About us</a></h4>
+					<h4 class="d-none d-md-block"><a href="{% link about-us/index.html %}">About us</a></h4>
 					<ul id="footer-menu-1" class="dropdown-menu">
 						<li><a href="#">Our impact</a></li>
 						<li><a href="#">Testimonials</a></li>
-						<li><a href="{{ site.baseurl }}{% link about-us/our-funding.html %}">Our funding</a></li>
-						<li><a href="{{ site.baseurl }}{% link about-us/our-funding/sponsorship.html %}">Sponsorship</a></li>
+						<li><a href="#">Our funding</a></li>
+						<li><a href="#">Sponsorship</a></li>
 						<li><a href="#">Our team</a></li>
 						<li><a href="#">Our community</a></li>
 						<li><a href="#">Careers</a></li>
@@ -34,10 +34,10 @@
 				<div class="dropdown">
 					<!-- changes to dropdown on smaller screen sizes -->
 					<h4 class="d-block d-md-none"><button class="dropdown-toggle d-block d-md-none" type="button" data-bs-target="#footer-menu-2" aria-controls="footer-menu-2" data-bs-toggle="collapse">Workshops</button></h4>
-					<h4 class="d-none d-md-block"><a href="{{ site.baseurl }}{% link workshops.html %}">Workshops</a></h4>
+					<h4 class="d-none d-md-block"><a href="{{ site.baseurl }}{% link workshops/workshops.html %}">Workshops</a></h4>
 					<ul id="footer-menu-2" class="dropdown-menu">
-						<li><a href="{{ site.baseurl }}{% link workshops/upcoming-workshops.html %}">Current workshops</a></li>
-						<li><a href="{{ site.baseurl }}{% link workshops/past-workshops.html %}">Past workshops</a></li>
+						<li><a href="#">Current workshops</a></li>
+						<li><a href="#">Past workshops</a></li>
 						<li><a href="#">Host a workshop</a></li>
 						<li><a href="#">Request a workshop</a></li>
 						<li><a href="#">Curricula</a></li>
