--- a/_layouts/about_us.html
+++ b/_layouts/about_us.html
@@ -15,16 +15,16 @@
 			<div class="row">
 				<div class="col-md-12">
 					{% include parts/breadcrumbs.html %}
-					<h1 class="page-title">{{ page.breadcrumb }}</h1>
+					<h1 class="page-title">{{ page.title }}</h1>
 					<ul class="nav nav-tabs section-tabs sub-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="{{ site.baseurl }}{% link about-us.html %}">About us</a>
+							<a class="nav-link" href="#">About us</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Our impact</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link"  href="{{ site.baseurl }}{% link about-us/our-funding.html %}">Our funding</a>
+							<a class="nav-link"  href="#">Our funding</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Our team</a>
