--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,7 +48,7 @@
                                                         <li><a href="{% link about-us/values.html %}">Values</a></li>
 							<li><a href="{% link about-us/impact.html %}">Impact</a></li>
 							<li><a href="{% link about-us/team.html %}">Team</a></li>
-							<li><a href="{% link about-us/careers.html %}">Careers</a></li>
+							<li><a href="{% link about-us/careers/index.html %}">Careers</a></li>
 							<li><a href="{% link about-us/financials.html %}">Financials</a></li>
 							<li><a href="{% link about-us/publications.html %}">Publications</a></li>
 							<li><a href="{% link about-us/contact-us.html %}">Contact us</a></li>
