reorganize workshop page paths

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,7 +34,7 @@
 				<div class="dropdown">
 					<!-- changes to dropdown on smaller screen sizes -->
 					<h4 class="d-block d-md-none"><button class="dropdown-toggle d-block d-md-none" type="button" data-bs-target="#footer-menu-2" aria-controls="footer-menu-2" data-bs-toggle="collapse">Workshops</button></h4>
-					<h4 class="d-none d-md-block"><a href="{{ site.baseurl }}{% link workshops/workshops.html %}">Workshops</a></h4>
+					<h4 class="d-none d-md-block"><a href="{{ site.baseurl }}{% link workshops/index.html %}">Workshops</a></h4>
 					<ul id="footer-menu-2" class="dropdown-menu">
 						<li><a href="#">Current workshops</a></li>
 						<li><a href="#">Past workshops</a></li>
