reorganize blog files

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -90,7 +90,7 @@
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
-						<a href="{% link blog/blog.html %}" class="nav-link">Blog</a>
+						<a href="{% link blog/index.html %}" class="nav-link">Blog</a>
 					</li>
 					<li class="nav-item">
 						<a href="#" class="btn btn-ghost nav-link">Donate</a>
