dummy commit to try build

--- a/_includes/parts/statistics.html
+++ b/_includes/parts/statistics.html
@@ -5,7 +5,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
-					<h2>Our diverse community is comprised of</h2>
+					<h2>Our diverse and global community is comprised of</h2>
 				</div>
 				<div class="col-md-4 stat">
 					{% asset blob-left alt:'' %}
