--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,8 +36,8 @@
 					<h4 class="d-block d-md-none"><button class="dropdown-toggle d-block d-md-none" type="button" data-bs-target="#footer-menu-2" aria-controls="footer-menu-2" data-bs-toggle="collapse">Workshops</button></h4>
 					<h4 class="d-none d-md-block"><a href="{{ site.baseurl }}{% link workshops/index.html %}">Workshops</a></h4>
 					<ul id="footer-menu-2" class="dropdown-menu">
-						<li><a href="#">Current workshops</a></li>
-						<li><a href="#">Past workshops</a></li>
+						<li><a href="{% link workshops/upcoming-workshops.html %}">Current workshops</a></li>
+						<li><a href="{% link workshops/past-workshops.html %}">Past workshops</a></li>
 						<li><a href="#">Host a workshop</a></li>
 						<li><a href="#">Request a workshop</a></li>
 						<li><a href="#">Curricula</a></li>
