--- a/_includes/header.html
+++ b/_includes/header.html
@@ -58,7 +58,7 @@
 						<a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Learn</a>
 						<ul class="dropdown-menu">
 							<li><a href="#">Lessons</a></li>
-							<li><a href="#">Workshops</a></li>
+							<li><a href="{% link workshops/index.html %}">Workshops</a></li>
 							<li><a href="#">Instructor Training</a></li>
 							<li><a href="#">Trainer Training</a></li>
 						</ul>
