link to host-workshop page from other pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
 					<ul id="footer-menu-2" class="dropdown-menu">
 						<li><a href="{% link workshops/upcoming-workshops.html %}">Current workshops</a></li>
 						<li><a href="{% link workshops/past-workshops.html %}">Past workshops</a></li>
-						<li><a href="#">Host a workshop</a></li>
+						<li><a href="{% link workshops/host-workshop.html %}">Host a workshop</a></li>
 						<li><a href="#">Request a workshop</a></li>
 						<li><a href="#">Curricula</a></li>
 						<li><a href="#">Software Carpentries workshops</a></li>
