--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -18,10 +18,10 @@
 					<h1 class="page-title">{{ page.breadcrumb }}</h1>
 					<ul class="nav nav-tabs section-tabs sub-nav">
 						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="#">Workshops</a>
+							<a class="nav-link active" aria-current="page" href="{% link workshops/index.html %}">Workshops</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Host a workshop</a>
+							<a class="nav-link" href="{% link workshops/host-workshop.html %}">Host a workshop</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link"  href="#">Curricula</a>
