add links to about seciton pages

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,14 +19,14 @@
 					<h4 class="d-block d-md-none"><button class="dropdown-toggle d-block d-md-none" type="button" data-bs-target="#footer-menu-1" aria-controls="footer-menu-1" data-bs-toggle="collapse">About us</button></h4>
 					<h4 class="d-none d-md-block"><a href="{% link about-us/index.html %}">About us</a></h4>
 					<ul id="footer-menu-1" class="dropdown-menu">
-						<li><a href="#">Our impact</a></li>
+						<li><a href="{% link about-us/impact.html %}">Our impact</a></li>
 						<li><a href="#">Testimonials</a></li>
-						<li><a href="#">Our funding</a></li>
+						<li><a href="{% link about-us/our-funding/index.html %}">Our funding</a></li>
 						<li><a href="#">Sponsorship</a></li>
-						<li><a href="#">Our team</a></li>
+						<li><a href="{% link about-us/impact.html %}">Our team</a></li>
 						<li><a href="#">Our community</a></li>
-						<li><a href="#">Careers</a></li>
-						<li><a href="#">Contact us</a></li>
+						<li><a href="{% link about-us/careers/index.html %}">Careers</a></li>
+						<li><a href="{% link about-us/contact-us.html %}">Contact us</a></li>
 					</ul>
 				</div>
 			</div>
