--- a/_layouts/about_us.html
+++ b/_layouts/about_us.html
@@ -21,19 +21,19 @@
 							<a class="nav-link" href="#">About us</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Our impact</a>
+							<a class="nav-link" href="{% link about-us/impact.html %}">Our impact</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link"  href="#">Our funding</a>
+							<a class="nav-link"  href="{% link about-us/our-funding/index.html %}">Our funding</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Our team</a>
+							<a class="nav-link" href="{% link about-us/team.html %}">Our team</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Our community</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Contact us</a>
+							<a class="nav-link" href="{% link about-us/contact-us.html %}">Contact us</a>
 						</li>
 					</ul>
 				</div>
