add contact link to sidebar

--- a/_includes/parts/feedback.html
+++ b/_includes/parts/feedback.html
@@ -1,5 +1,5 @@
 <h2 class="visually-hidden">Feedback</h2>
-<p>Feedback on this page? <a href="#" class="link underline"> Contact us</a></p>
+<p>Feedback on this page? <a href="{% link about-us/contact-us.html %}" class="link underline"> Contact us</a></p>
 <hr/>
 <p>Last edited: {{ page.last_modified_at | date: "%Y-%m-%d at %T UTC" }} Oct 10, 2021 at 8:41 pm ET</p>
 <hr/>
