update menu options for i-want-to menu

--- a/_includes/parts/cta_banner.html
+++ b/_includes/parts/cta_banner.html
@@ -4,9 +4,18 @@
 		<span class="nav-item dropdown">
 			<a href="#" class="nav-link dropdown-toggle cta-dropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">host a workshop {% asset chevron-down-black class="dropdown-arrow" alt:'' %}</a>
 			<ul class="dropdown-menu cta-dropdown-menu">
-				<li><a href="#">host a workshop</a></li>
-				<li><a href="#">host a workshop</a></li>
-				<li><a href="#">host a workshop</a></li>
+				<li><a href="#">Become a volunteer </a></li>
+				<li><a href="#">Find a resource</a></li>
+				<li><a href="#">Get involved</a></li>
+				<li><a href="#">Host a workshop</a></li>
+				<li><a href="#">Host a training</a></li>
+				<li><a href="#">Learn more about The Carpentries</a></li>
+				<li><a href="#">Register a self-organised workshop</a></li>
+				<li><a href="#">Sign up for a workshop</a></li>
+				<li><a href="#">Sign up for instructor training</a></li>
+				<li><a href="#">Support The Carpentries</a></li>
+				<li><a href="#">Connect with others</a></li>
+				
 			</ul>
 
 		</span>
