add request tab to workshop page

--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -21,7 +21,7 @@
 							<a class="nav-link active" aria-current="page" href="{% link workshops/index.html %}">Workshops</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{% link workshops/host-workshop.html %}">Host a workshop</a>
+							<a class="nav-link" href="{% link workshops/host-workshop.html %}">Request a workshop</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link"  href="#">Curricula</a>
