--- a/_includes/header.html
+++ b/_includes/header.html
@@ -76,7 +76,7 @@
 					<li class="nav-item dropdown">
 						<a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Host</a>
 						<ul class="dropdown-menu">
-							<li><a href="{% link workshops/host-workshop.html %}">Host a workshop</a></li>
+							<li><a href="{% link workshops/request-workshop.html %}">Host a workshop</a></li>
 							<li><a href="#">Host a training</a></li>
 							<li><a href="#">Pricing</a></li>
 						</ul>
