add link to workshops faq

--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -24,7 +24,7 @@
 							<a class="nav-link" href="{% link workshops/request-workshop.html %}">Request a workshop</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link"  href="#">Curricula</a>
+							<a class="nav-link"  href="{% link workshops/workshops_faq.html%}">Workshops FAQ</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="#">Browse lessons</a>
