--- a/_includes/parts/supporters.html
+++ b/_includes/parts/supporters.html
@@ -12,27 +12,27 @@
 				<div class="row logo-row">
 					<div class="col-6 col-md">
 						<a href="#" target="_blank" aria-label="AWS - opens in new window">
-							{% asset aws-logo alt:'' %}
+							{% asset organisation_logos/aws-logo alt:'' %}
 						</a>
 					</div>
 					<div class="col-6 col-md">
 						<a href="#" target="_blank" aria-label="Digitial Ocean - opens in new window">
-							{% asset digital-ocean-logo alt:'' %}
+							{% asset organisation_logos/digital-ocean-logo alt:'' %}
 						</a>
 					</div>
 					<div class="col-6 col-md">
 						<a href="#" target="_blank" aria-label="Rackspace - opens in new window">
-							{% asset rackspace-logo alt:'' %}
+							{% asset organisation_logos/rackspace-logo alt:'' %}
 						</a>
 					</div>
 					<div class="col-6 col-md">
 						<a href="#" target="_blank" aria-label="Alfred P. Sloan Foundation - opens in new window">
-							{% asset alfred-sloan-logo alt:'' %}
+							{% asset organisation_logos/alfred-sloan-logo alt:'' %}
 						</a>
 					</div>
 					<div class="col-6 col-md">
 						<a href="#" target="_blank" aria-label="Biotech Partners - opens in new window">
-							{% asset biotech-partners-logo alt:'' %}
+							{% asset organisation_logos/biotech-partners-logo alt:'' %}
 						</a>
 					</div>
 				</div>
@@ -41,32 +41,32 @@
 				<div class="row logo-row">
 					<div class="col-6 col-md">
 						<a href="#" target="_blank" aria-label="R Consortium - opens in new window">
-							{% asset r-consortium-logo alt:'' %}
+							{% asset organisation_logos/r-consortium-logo alt:'' %}
 						</a>
 					</div>
 					<div class="col-6 col-md">
 						<a href="#" target="_blank" aria-label="Mozilla - opens in new window">
-							{% asset mozilla-logo alt:'' %}
+							{% asset organisation_logos/mozilla-logo alt:'' %}
 						</a>
 					</div>
 					<div class="col-6 col-md">
 						<a href="#" target="_blank" aria-label="Gordon and Betty Moore Foundation - opens in new window">
-							{% asset moore-logo alt:'' %}
+							{% asset organisation_logos/moore-logo alt:'' %}
 						</a>
 					</div>
 					<div class="col-6 col-md">
 						<a href="#" target="_blank" aria-label="California Digital Library - opens in new window">
-							{% asset cdl-logo alt:'' %}
+							{% asset organisation_logos/cdl-logo alt:'' %}
 						</a>
 					</div>
 					<div class="col-6 col-md">
 						<a href="#" target="_blank" aria-label="Chan Zuckerberg Initiative - opens in new window">
-							{% asset chan-zuck-logo alt:'' %}
+							{% asset organisation_logos/chan-zuck-logo alt:'' %}
 						</a>
 					</div>
 					<div class="col-6 col-md">
 						<a href="#" target="_blank" aria-label="R Studio - opens in new window">
-							{% asset r-studio-logo alt:'' %}
+							{% asset organisation_logos/r-studio-logo alt:'' %}
 						</a>
 					</div>
 				</div>
