update text to say volunteers

--- a/_includes/parts/statistics.html
+++ b/_includes/parts/statistics.html
@@ -17,7 +17,7 @@
 					<div class="wrapper">
 						<p class="stat-text">More than</p>
 						<p class="stat-number">{{ total_volunteers }}</p>
-						<p class="stat-text">instructors</p>
+						<p class="stat-text">volunteers</p>
 					</div>
 				</div>
 				<div class="col-md-4 stat">
