--- a/_includes/parts/statistics.html
+++ b/_includes/parts/statistics.html
@@ -34,7 +34,7 @@
 					{% asset blob-right alt:'' %}
 					<div class="wrapper">
 						<p class="stat-text">More than</p>
-						<p class="stat-number">{{ site.members.size }}</p>
+						<p class="stat-number">{{ site.data.members.size }}</p>
 						<p class="stat-text">members</p>
 					</div>
 				</div>				
