--- a/_includes/parts/fifty_fifty_left.html
+++ b/_includes/parts/fifty_fifty_left.html
@@ -7,7 +7,7 @@
 			<div class="col-md-6 content order-md-first">
 				<div class="wrapper">
 					<h2>Our volunteer-led workshops are small, hands on, and interactive.</h2>
-					<a href="#" class="btn btn-secondary dark-hover">Register for workshops</a>
+					<a href="#" class="btn btn-secondary dark-hover">Find a workshop</a>
 				</div>
 			</div>
 		</div>
