--- a/_includes/parts/fifty_fifty_right.html
+++ b/_includes/parts/fifty_fifty_right.html
@@ -8,7 +8,7 @@
 				<div class="wrapper">
 					<h2 class="bigger-mobile">Subscribe to our newsletter</h2>
 					<p>Get a roundup of events, updates, and tips twice a month.</p>
-					<a href="#" class="btn btn-secondary dark-hover">Sign up</a>
+					<a href="#" class="btn btn-secondary dark-hover">Subscribe to newsletter</a>
 				</div>
 			</div>
 		</div>
