become a sponsor, not supporter

--- a/_includes/parts/supporters.html
+++ b/_includes/parts/supporters.html
@@ -28,7 +28,7 @@
 		</div>
 
 			<div class="col-12">
-				<a href="#" class="btn btn-secondary">Become a supporter</a>
+				<a href="#" class="btn btn-secondary">Become a sponsor</a>
 			</div>
 		</div>
 	</div>
