update about us top menu and sidebar

--- a/_includes/sidebars/about_us.html
+++ b/_includes/sidebars/about_us.html
@@ -4,15 +4,9 @@
 </ul>
 <hr/>
 <form>
-<label for="email">Subscribe to the philanthropy newsletter</label>
+<label for="email">Subscribe to The Carpentries Clippings Newsletter</label>
 <input type="email" name="email" autocomplete="on" placeholder="Enter your email address" required/>
 <input type="submit" id="subscribe" class="btn btn-secondary" value="Subscribe"></input>
 </form>
-<hr/>
-<h2>Thank you to our sponsors</h2>
-<ul>
-	<li>sponsor logo</li>
-	<li>sponsor logo</li>
-</ul>
 <hr/>
 {% include parts/feedback.html %}
