--- a/_layouts/about_us.html
+++ b/_layouts/about_us.html
@@ -18,19 +18,19 @@
 					<h1 class="page-title">{{ page.title }}</h1>
 					<ul class="nav nav-tabs section-tabs sub-nav">
 						<li class="nav-item">
-							<a class="nav-link" href="#">About us</a>
+							<a class="nav-link" href="{% link about-us/index.html %}">About us</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{% link about-us/impact.html %}">Our impact</a>
+							<a class="nav-link" href="{% link about-us/values.html %}">Our Values</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link"  href="{% link about-us/our-funding/index.html %}">Our funding</a>
+							<a class="nav-link"  href="{% link about-us/impact.html %}">Our Impact</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{% link about-us/team.html %}">Our team</a>
+							<a class="nav-link" href="{% link about-us/governance.html %}">Governance</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="#">Our community</a>
+							<a class="nav-link" href="{% link about-us/team.html %}">Our Team</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" href="{% link about-us/contact-us.html %}">Contact us</a>
