update workshops layout

--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -21,13 +21,10 @@
 							<a class="nav-link active" aria-current="page" href="{% link workshops/index.html %}">Workshops</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" href="{% link workshops/request-workshop.html %}">Request a workshop</a>
+							<a class="nav-link" href="{% link workshops/upcoming-workshops.html %}">Upcoming Workshops</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link"  href="{% link workshops/workshops_faq.html%}">Workshops FAQ</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Browse lessons</a>
+							<a class="nav-link"  href="{% link workshops/faq.html%}">Workshops FAQ</a>
 						</li>
 					</ul>
 				</div>
