Update the main header menu -organisation and add links to draft pages

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,17 +41,17 @@
 			<div class="collapse navbar-collapse" id="menu-collapse">
 				<ul id="main-menu" class="nav">
 					<li class="nav-item dropdown">
-						<a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">About us</a>
+						<a href="{% link about-us/index.html %}" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">About us</a>
 						<ul class="dropdown-menu">
 							<li><a href="{% link about-us/index.html %}">About The Carpentries</a></li>
-                                                        <li><a href="{% link about-us/governance.html %}">Governance</a></li>
-                                                        <li><a href="{% link about-us/values.html %}">Values</a></li>
-							<li><a href="{% link about-us/impact.html %}">Impact</a></li>
-							<li><a href="{% link about-us/team.html %}">Team</a></li>
-							<li><a href="{% link about-us/careers/index.html %}">Careers</a></li>
+                            <li><a href="{% link about-us/careers/index.html %}">Careers</a></li>
 							<li><a href="{% link about-us/financials.html %}">Financials</a></li>
+							<li><a href="{% link about-us/governance.html %}">Governance</a></li>
+                            <li><a href="{% link about-us/impact.html %}">Impact</a></li>
 							<li><a href="{% link about-us/publications.html %}">Publications</a></li>
-							<li><a href="{% link about-us/contact-us.html %}">Contact us</a></li>
+							<li><a href="{% link about-us/team.html %}">Team</a></li>
+							<li><a href="{% link about-us/values.html %}">Values</a></li>
+							<li><a href="{% link about-us/contact-us.html %}">Contact Us</a></li>
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
@@ -59,41 +59,41 @@
 						<ul class="dropdown-menu">
 							<li><a href="#">Lessons</a></li>
 							<li><a href="{% link workshops/index.html %}">Workshops</a></li>
-							<li><a href="#">Instructor Training</a></li>
-							<li><a href="#">Trainer Training</a></li>
+							<li><a href="{% link instructor-training/index.html %}">Instructor Training</a></li>
+							<li><a href="{% link trainer-training/index.html %}">Trainer Training</a></li>
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
-						<a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Volunteer</a>
+						<a href="{% link volunteer/get-involved.html %}" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Volunteer</a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Community</a></li>
-							<li><a href="#">Get Involved</a></li>
+							<li><a href="{% link volunteer/community/index.html %}">Community</a></li>
+							<li><a href="{% link volunteer/get-involved.html %}">Get Involved</a></li>
 							<li><a href="#">Handbook</a></li>
 							<li><a href="#">Newsletter</a></li>
 							<li><a href="#">AMY</a></li>
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
-						<a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Host</a>
+						<a href="{% link host/workshop.html %}" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Host</a>
 						<ul class="dropdown-menu">
-							<li><a href="{% link workshops/request-workshop.html %}">Host a workshop</a></li>
-							<li><a href="#">Host a training</a></li>
-							<li><a href="#">Pricing</a></li>
+							<li><a href="{% link host/training.html %}">Host A Training</a></li>
+							<li><a href="{% link host/workshop.html %}">Host A Workshop</a></li>
+							<li><a href="{% link host/pricing.html %}">Pricing</a></li>
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
-						<a href="#" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Support</a>
+						<a href="{% link support/membership/index.html %}" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">Support</a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Membership</a></li>
-							<li><a href="#">Donate</a></li>
-							<li><a href="#">Sponsorship</a></li>
+							<li><a href="{% link support/membership/index.html %}">Membership</a></li>
+							<li><a href="{% link support/sponsorship.html %}">Sponsorship</a></li>
+							<li><a href="https://give.communityin.org/TheCarpentries?ref=ab_2ShDFfwTHrs2ShDFfwTHrs">Donate</a></li>
 						</ul>
 					</li>
 					<li class="nav-item dropdown">
-						<a href="{% link blog/index.html %}" class="nav-link">Blog</a>
+						<a href="#" class="nav-link">Blog</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" class="btn btn-ghost nav-link">Donate</a>
+						<a href="https://give.communityin.org/TheCarpentries?ref=ab_2ShDFfwTHrs2ShDFfwTHrs" class="btn btn-ghost nav-link">Donate</a>
 					</li>
 				</ul>
 			</div>
