update links to just be placeholders

--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -21,7 +21,7 @@
 							<a class="nav-link" aria-current="page" href="{% link workshops/index.html %}">Workshops</a>
 						</li>
 						<li class="nav-item">
-							<a class="nav-link" aria-current="page" href="{% link workshops/upcoming-workshops.html %}">Upcoming Workshops</a>
+							<a class="nav-link" aria-current="page" href="#">Upcoming Workshops</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" aria-current="page" href="{% link workshops/faq.html%}">Workshops FAQ</a>
